--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</div>
 
 	<main class="contenedor">
-		<p>ya llevamos 9 de los mejores meses de mi vida y cada dia mas me convences de   sos que el amor de mi vida mi alma gemela mi amor eterno gracias por estar siempre a mi lado en las buenas y en las malas sos todo mi mundo y lo que me hace feliz  sin vos mi vida no seria igual sin nuestra hija sin el amor que me das a diario te amo tanto que ya ko  se como </p>
+		<p>ya llevamos 9 de los mejores meses de mi vida y cada dia mas me convences de   sos que el amor de mi vida mi alma gemela mi amor eterno gracias por estar siempre a mi lado en las buenas y en las malas sos todo mi mundo y lo que me hace feliz  sin vos mi vida no seria igual sin nuestra hija sin el amor que me das a diario te amo tanto que ya no  se como </p>
 		<img src="leina.png" />
 	</main>
 
